# Audiocity

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/: copilot-instructions.md
docs/: 00-vision.md  01-architecture.md  02-real-time-rules.md  03-ui-sampler-style.md  04-engine-contract.md  05-testing.md  06-roadmap.md  07-sfz-preprocessor.md  08-sfz-import.md  09-browser-index.md  10-dependencies.md  11-vscode-and-copilot-workflow.md
installer/: AudiocityBootstrapper.wixproj  AudiocityBootstrapper.wxs  AudiocityInstaller.iss  AudiocityInstaller.wixproj  AudiocityInstaller.wxs  MIT-LICENSE.rtf  PortableInstall.txt
installer/redist/: README.md
output/installer/Debug/: AudiocityInstaller.wixpdb
output/installer/Release/: AudiocityInstaller.wixpdb  AudiocitySetup.wixpdb
output/release-stage/portable/Audiocity-1.0.0-windows-x64-portable/: LICENSE  PortableInstall.txt
prompts/: 00-bootstrap.md  01-mvp-audio.md  02-v1-sfz.md  03-v1-browser.md
scripts/: bootstrap.ps1  build_release.ps1  cleanup_artifacts.ps1  generate_icons.py  integrate_asio_sdk.ps1
src/engine/: EngineCore.cpp  EngineCore.h  RexLoader.cpp  RexLoader.h  SettingsUndoHistory.h  VoicePool.cpp  VoicePool.h  ZoneMap.cpp  ZoneMap.h  ZoneSelector.cpp  ZoneSelector.h
src/engine/sfz/: SfzImport.cpp  SfzImport.h  SfzModel.h
src/plugin/: BrowserIndex.cpp  BrowserIndex.h  CcLearnDial.cpp  CcLearnDial.h  CommandStack.h  DialLookAndFeel.h  EditorViewModel.h  PeakPreviewCache.cpp  PeakPreviewCache.h  PlayerPadState.cpp  PlayerPadState.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetJson.cpp  PresetJson.h  SelectionModel.h  ZoneModel.cpp  ZoneModel.h
tests/: CMakeLists.txt  OfflineRenderTests.cpp  PackagingConfigTests.cmake  ValidateInstallerMsiTables.ps1
tests/fixtures/sfz/: cycle_a.sfz  cycle_b.sfz  inc1.sfz  inc2.sfz  main_nested.sfz  missing_and_unsupported.sfz
